--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 h1 {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   font-size: 24px;
   font-weight: 900;
 }
@@ -97,6 +97,7 @@ p {
 }
 
 .quiz-screen,
-.result-screen {
+.final-result-screen,
+.level-result-screen {
   display: none;
 }
