--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ body {
 }
 
 .page-container {
-  background: rgb(46, 133, 176);
   padding: 10px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -45,7 +44,7 @@ p {
 .btn-start {
   display: block;
   width: 50%;
-  padding: 15px;
+  padding: 15px 5px 5px 5px;
   margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
