--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ p {
 .btn-start {
   display: block;
   width: 50%;
-  padding: 15px 5px 5px 5px;
+  padding: 15px 15px;
   margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
@@ -68,10 +68,13 @@ p {
 .btn {
   color: #000;
   font-weight: 300;
-  padding: 10px;
+  padding: 10px 10px;
   margin: 10px;
-  border-radius: 10px;
+  border-radius: 5px;
   cursor: pointer;
+}
+.btn:hover {
+  background-color: aliceblue;
 }
 .corect {
   background-color: #28a745 !important;
